# gr

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: gr_types.hpp  parser.hpp  reader.hpp
src/: main.cpp  parser.cpp  reader.cpp
